kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing         # ALB의 접근 방식 설정
    alb.ingress.kubernetes.io/target-type: ip                 # ALB가 대상으로 할 IP 주소 유형
    alb.ingress.kubernetes.io/group.name: my-group            # ALB 그룹 설정
    alb.ingress.kubernetes.io/load-balancer-name: alb-ingress-controller
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:727646470302:certificate/a9e264e6-a401-42c8-ad4e-9795b721cfa4"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'  # HTTP와 HTTPS 포트 설정
    alb.ingress.kubernetes.io/ssl-redirect: "443"             # HTTPS로 리다이렉트 설정
    alb.ingress.kubernetes.io/healthcheck-path: "/"           # 헬스 체크 경로 설정
    alb.ingress.kubernetes.io/backend-protocol: HTTPS         # 백엔드 서비스에 대한 프로토콜을 HTTPS로 설정
spec:
  ingressClassName: alb
  rules:
  - host: midteam1.lion.nyhhs.com                             # 도메인 이름
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service                            # 프론트엔드 서비스 이름
            port: 
              number: 9443                                    # 프론트엔드 서비스 포트
